--- a/app-name/src/Login.css
+++ b/app-name/src/Login.css
@@ -69,7 +69,7 @@ body {
 .login-box .user-box input:valid ~ label {
   top: -20px;
   left: 0;
-  color: #03e9f4;
+  color: #67f403;
   font-size: 12px;
 }
 
@@ -77,7 +77,7 @@ body {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
-  color: #03e9f4;
+  color: #67f403;
   font-size: 16px;
   text-decoration: none;
   text-transform: upercase;
@@ -88,13 +88,13 @@ body {
 }
 
 .login-box a:hover {
-  background: #03e9f4;
+  background: #67f403;
   color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 5px #03e9f4,
-              0 0 25px #03e9f4,
-              0 0 50px #03e9f4,
-              0 0 100px #03e9f4;
+  box-shadow: 0 0 5px #67f403,
+              0 0 25px #67f403,
+              0 0 50px #67f403,
+              0 0 100px #67f403;
 }
 
 .login-box a span {
@@ -107,7 +107,7 @@ body {
   left: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
+  background: linear-gradient(90deg, transparent, #67f403);
   animation: btn-anim1 1s linear infinite;
 }
 
@@ -125,7 +125,7 @@ body {
   right: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
+  background: linear-gradient(180deg, transparent, #67f403);
   animation: btn-anim2 1s linear infinite;
   animation-delay: .25s
 }
@@ -144,7 +144,7 @@ body {
   right: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
+  background: linear-gradient(270deg, transparent, #67f403);
   animation: btn-anim3 1s linear infinite;
   animation-delay: .5s
 }
@@ -163,7 +163,7 @@ body {
   left: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(360deg, transparent, #03e9f4);
+  background: linear-gradient(360deg, transparent, #67f403);
   animation: btn-anim4 1s linear infinite;
   animation-delay: .75s
 }
