--- a/app-name/src/App.css
+++ b/app-name/src/App.css
@@ -275,7 +275,7 @@ h3 {
   font-weight: 400;
 }
 .footer {
-  position: absolute;
+  position: bottom;
   bottom: 0;
   width: 100%;
   height: 15vh;
