--- a/app-name/src/Login.css
+++ b/app-name/src/Login.css
@@ -1,18 +1,3 @@
-
-/* <div class="login-box">
-<form>
-  <a href="#">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    ☦︎ Father Michael's New Button ☦︎
-  </a>
-</form>
-</div> */
-
-
-
 body {
   margin:0;
   font-family: sans-serif;
@@ -80,7 +65,7 @@ body {
   color: #67f403;
   font-size: 16px;
   text-decoration: none;
-  text-transform: upercase;
+  text-transform: uppercase;
   overflow: hidden;
   transition: .5s;
   margin-top: 40px;
@@ -89,7 +74,7 @@ body {
 
 .login-box a:hover {
   background: #67f403;
-  color: #fff;
+  color: black;
   border-radius: 5px;
   box-shadow: 0 0 5px #67f403,
               0 0 25px #67f403,
