password and username are 123 and Lambda, respectively

--- a/app-name/src/Login.css
+++ b/app-name/src/Login.css
@@ -4,6 +4,10 @@ body {
   /* background: linear-gradient(#141e30, #243b55); */
 }
 
+a [class='active'] {
+  text-decoration: none;
+}
+
 .login-box {
   position: absolute;
   top: 50%;
